--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     height: 250px;
     display: flex;
     justify-content: center; /* Centrer horizontalement */
+    align-items: center; 
 }
 
 #tamagotchi {
